# blog-next

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  404.html  LICENSE  Makefile  README.md  TODO.md  _config.arknights.yml  _config.yml  about.html  articles  articles.html  clips.html  ideas  ideas.html  index.html  jessiecode-wiki.html  jest.config.js  learn_from_ai  learn_from_ai.html  m.ps1  manim.ps1  next-sitemap.config.js  next.config.js  package-lock.json  package.json  posts.html  prev.html  pyproject.toml  requirements.txt  robots.txt  sitemap-0.xml  sitemap.xml  tags.html  tailwind.config.js  testwiki.html  tsconfig.json  ygowiki.html
.cache/: resource-pool.json
.github/: FUNDING.yml  dependabot.yml
404/: index.html
articles/: Building-this-blog.html  Handy-heap-cheat-sheet.html  Sort-algorithm.html  The-beauty-of-design-parten.html  create-blog-cicd-by-github.html  from-linear-algebra-to-analytical-machanics-2.html  graph-for-economics-1.html  graph-for-economics-2.html  hello-world.html  index.html  init-a-new-hexo-project.html  introduction-for-k8s-2.html  introduction-for-k8s.html  junior-vector-introduction-2.html  junior-vector-introduction.html  kubernetes-pod-lifecycle.html  newest.html  python-dict.html  the-using-in-cpp.html  try-cursor-and-thinking.html  use-paste-image-and-vscode-memo.html  why-homogeneous.html  ygomd-chronicle-cup-six-samurai.html  ygomd-deck-ryzeal-1.html  ygomd-dragonmaid-1.html  ygomd-megalith.html  ygomd-pendulum-evelution-supreme-king.html  ygomd-pendulum-evolution-zarc-anaconda.html  ygomd-synchro-cup-crystron.html  (+2 more)
(+10619 files in other folders)
